Begin to add mobile styles

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* VARIABLES */
 :root {
     --palered: hsl(0, 36%, 70%);
     --softred: hsl(0, 93%, 68%);
@@ -7,7 +8,79 @@
     --bodytext: 'Josefin Sans', sans-serif;
 }
 
+/* GLOBAL STYLES */
 body {
     font-size: 16px;
     font-family: var(--bodytext);
+    margin: 0;
+    background: var(--gradient1);
+    height: 100vh;
+}
+
+/* HERO IMAGE */
+#mobile-hero img,
+#desktop-hero img {
+    width: 100%;
+}
+
+#desktop-hero {
+    display: none;
+}
+
+/* LOGO */
+.wrapper div:first-of-type {
+    height: 75px;
+    display: flex;
+    align-items: center;
+    margin-left: 25px;
+}
+
+#logo {
+    height: 25px;
+}
+
+/* HEADING */
+h1 {
+    color: var(--dkgrayred);
+    text-transform: uppercase;
+    padding: 20px 20px 0 20px;
+    font-size: 2.5rem;
+    line-height: 1.1;
+    letter-spacing: 5px;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+h1 span {
+    color: var(--palered);
+    font-weight: 300;
+}
+
+/* PARAGRAPH */
+p {
+    color: var(--palered);
+    text-align: center;
+    padding: 0 25px;
+    font-size: 0.95rem;
+    line-height: 1.5;
+}
+
+/* FOOTER */
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 600px) {
+    /* HERO IMAGE */
+    #mobile-hero {
+        display: none;
+    }
+
+    #desktop-hero {
+        display: block;
+    }
 }
