--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     margin: 0;
     background: var(--gradient1);
     height: 100vh;
+    box-sizing: border-box;
 }
 
 /* HERO IMAGE */
@@ -46,9 +47,8 @@ h1 {
     padding: 20px 20px 0 20px;
     font-size: 2.5rem;
     line-height: 1.1;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
     text-align: center;
-    margin-bottom: 0;
 }
 
 h1 span {
@@ -63,6 +63,48 @@ p {
     padding: 0 25px;
     font-size: 0.95rem;
     line-height: 1.5;
+}
+
+/* EMAIL INPUT */
+.input-wrapper {
+    position: relative;
+    margin-top: 35px;
+}
+
+input[type="email"] {
+    background: transparent;
+    border-radius: 35px;
+    border: 1px solid var(--palered);
+    padding: 20px;
+    width: 260px;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    bottom: 0;
+    opacity: 0.7;
+}
+
+input::placeholder {
+    font-family: var(--bodytext);
+    color: var(--palered);
+}
+
+.input-wrapper span {
+    background: var(--gradient2);
+    border-radius: 35px;
+    height: 42px;
+    width: 65px;
+    position: absolute;
+    top: 0;
+    right: 20px;
+    bottom: 0;
+    vertical-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 3px 3px 10px var(--palered);
+    cursor: pointer;
 }
 
 /* FOOTER */
